# Lidar_Utility

./: .gitignore  README.md
PCL_testspace/DoN/: don_segmentation.cpp  readme.txt
PCL_testspace/Viz/: cloud_viewer.cpp  readme.txt
PCL_testspace/centerPCD/: CMakeLists.txt  car1.pcd  centerPCD.cpp  readme.txt
PCL_testspace/hypothesisVerification/: global_hypothesis_verification.cpp  readme.txt
PCL_testspace/hypothesisVerificationModified/: global_hypothesis_verification.cpp  readme.txt
PCL_testspace/manipulatePCD/: CMakeLists.txt  centerPCD.cpp  cutPCD.cpp  mergePCD.cpp  readme.txt
PCL_testspace/mergePCD/: CMakeLists.txt  car5.pcd  car6.pcd  mergePCD.cpp  merged2.pcd
PointCloudData/: result.pcd
PointCloudData/objects/: car1.pcd  car10.pcd  car2.pcd  car3.pcd  car4.pcd  car5.pcd  car6.pcd  car7.pcd  car8.pcd  car9.pcd  person1.pcd  person2.pcd  persons1.pcd  persons10.pcd  persons11.pcd  persons12.pcd  persons13.pcd  persons14.pcd  persons15.pcd  persons16.pcd  persons2.pcd  persons3.pcd  persons4.pcd  persons5.pcd  persons6.pcd  persons7.pcd  persons9.pcd  truck1.pcd  truck2.pcd  van1.pcd  van2.pcd  van3.pcd  van4.pcd  van5.pcd  van6.pcd
PointCloudData/pcd/velodyne1/: 1803laser.pcd  1806laser.pcd  1810laser.pcd  1813laser.pcd  1815laser.pcd  1817laser.pcd  1820laser.pcd  1827laser.pcd  1828laser.pcd  1833laser.pcd  1836laser.pcd  1839laser.pcd  1846laser.pcd  1849laser.pcd  1862laser.pcd  1863laser.pcd  1871laser.pcd  1876laser.pcd  1878laser.pcd  1879laser.pcd  1885laser.pcd  1892laser.pcd  1896laser.pcd  1898laser.pcd  1904laser.pcd  1906laser.pcd  1908laser.pcd  1909laser.pcd  1914laser.pcd  1915laser.pcd  1916laser.pcd  1920laser.pcd  1923laser.pcd  1924laser.pcd  1929laser.pcd  1932laser.pcd  1946laser.pcd  1951laser.pcd  1958laser.pcd  1959laser.pcd  (+238 more)
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/rslidar_driver/: rslidarNodeConfig.h
devel/include/rslidar_msgs/: rslidarPacket.h  rslidarPic.h  rslidarScan.h
devel/include/rslidar_pointcloud/: CloudNodeConfig.h
devel/lib/my_pcl_tutorial/: example
devel/lib/outlier_removal_filter/: outlierRemoval
devel/lib/pkgconfig/: my_pcl_tutorial.pc  outlier_removal_filter.pc  rslidar_driver.pc  rslidar_msgs.pc
devel/lib/rslidar_driver/: rslidar_node
devel/lib/rslidar_pointcloud/: cloud_node
no/: nodelet_plugins.xml  passThrough.cc
no/new/: lu_node.cc  passThroughFilter.cc
no/object_detective_don/: CMakeLists.txt
no/object_detective_don/launch/: .outlier_removal.launch.swp  object_detective_slave.launch
no/oldMake/: passThrough.txt
pcd/: 1801laser.pcd  1802laser.pcd  1824laser.pcd  1826laser.pcd  1834laser.pcd  1843laser.pcd  1848laser.pcd  1850laser.pcd  1853laser.pcd  1855laser.pcd  1864laser.pcd  1865laser.pcd  1866laser.pcd  1875laser.pcd  1881laser.pcd  1884laser.pcd  1887laser.pcd  1889laser.pcd  1894laser.pcd  1895laser.pcd  1899laser.pcd  1907laser.pcd  1912laser.pcd  1917laser.pcd  1918laser.pcd  1921laser.pcd  1926laser.pcd  1928laser.pcd  1934laser.pcd  1935laser.pcd  1936laser.pcd  1938laser.pcd  1939laser.pcd  1943laser.pcd  1950laser.pcd  1952laser.pcd  1953laser.pcd  1954laser.pcd  1955laser.pcd  1963laser.pcd  (+237 more)
pcd/velodyne1/: 1804laser.pcd  1805laser.pcd  1807laser.pcd  1808laser.pcd  1809laser.pcd  1811laser.pcd  1812laser.pcd  1814laser.pcd  1816laser.pcd  1818laser.pcd  1819laser.pcd  1821laser.pcd  1822laser.pcd  1823laser.pcd  1825laser.pcd  1829laser.pcd  1830laser.pcd  1831laser.pcd  1832laser.pcd  1835laser.pcd  1837laser.pcd  1838laser.pcd  1840laser.pcd  1841laser.pcd  1842laser.pcd  1844laser.pcd  1845laser.pcd  1847laser.pcd  1851laser.pcd  1852laser.pcd  1854laser.pcd  1856laser.pcd  1857laser.pcd  1858laser.pcd  1859laser.pcd  1860laser.pcd  1861laser.pcd  1867laser.pcd  1868laser.pcd  1869laser.pcd  (+506 more)
rviz/: default.rviz  filterComparison.rviz  master_cfg.rviz  objectDetectCompairson.rviz  offlinePCDconfiguration.rviz  onlineRSLIDARconfiguration.rviz  pandar_cfg.rviz  persistent_settings  readme.txt  rvizTransferForGit.sh
setIP/: pandar40.txt  rsLidar.txt  setIP.sh
settings/: pandar.yaml
src/detectives/object_detective/: CMakeLists.txt  package.xml
src/detectives/object_detective_don/: CMakeLists.txt  package.xml
src/detectives/object_detective_euclidean/: CMakeLists.txt  package.xml
src/detectives/object_detective_hypothesis_verification/: CMakeLists.txt  package.xml
src/detectives/road_detective/: CMakeLists.txt  package.xml
src/detectives/vehicle_visualization/: CMakeLists.txt  package.xml
src/drivers/hesai_pandar/: readme-niko.txt
src/drivers/hesai_pandar/src/pandar_pointcloud/src/conversions/: .ringcolors_nodelet.cc.swp  CMakeLists.txt  cloud_nodelet.cc  ringcolors_nodelet.cc  transform_nodelet.cc
src/drivers/rslidar/: README_UPDATED.md
src/filters/downsample_filter/: package.xml
src/filters/intensity_filter/: package.xml
src/lidar_utility_msgs/: CMakeLists.txt  package.xml
src/lidar_utility_msgs/msg/: lidarUtilitySettings.msg  objectInfo.msg
src/lu_nodelet/: CMakeLists.txt  nodelet_plugins.xml  nodelets.xml  package.xml
src/lu_nodelet/include/lu_nodelet/: MyNodeletClass.h
src/lu_nodelet/launch/: nodelet.launch  nodelet2.launch  p2.launch  pandar.launch  pandar.yaml  rs_lidar_16.launch  two_lidar.launch
src/lu_nodelet/rviz/: pandar.rviz
src/lu_nodelet/src/: .lu_node.cc.swp  .passThroughFilter.cc.swp  CMakeLists.txt  MyNodeletClass.cc  MyNodeletClass.h  PCMakeLists.txt  differenceOfNormals.cc  lu_node.cc  lu_node.cpp  outlierRemovalFilter.cc  passThroughFilter.cc  passThroughFilter.h  planeFilter.cc  printUtil.h  x.txt
src/lu_nodelet/src/detectives/: differenceOfNormals.cpp
src/lu_nodelet/src/filters/downsample_filter/: CMakeLists.txt
src/lu_nodelet/src/filters/downsample_filter/launch/: downsample_slave_core.launch
src/lu_nodelet/src/filters/intensity_filter/: CMakeLists.txt  package.xml
src/lu_nodelet/src/filters/intensity_filter/src/: intensityFilter.cpp
src/lu_nodelet/src/filters/oldMake/: outlier.txt
src/master_launcher/: CMakeLists.txt  package.xml
src/my_pcl_tutorial/src/: example.cpp
(+123 files in other folders)
