<package>

  <name>lidar_utility_msgs</name>
  <version>1.0.0</version>
  <description>
    ROS message definitions for lidar_utility package.
  </description>
  <maintainer email="nxgamarra@gmail.com">Nikolas Gamarra</maintainer>
  <author>Nikolas Gamarra</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
