<package>

  <name>lu_nodelet</name>
  <version>1.0.0</version>
  <description>
  conversion of Lidar_Utility to nodelet
  </description>
  <maintainer email="nxgamarra@gmail.com">Nikolas Gamarra</maintainer>
  <author>Nikolas Gamarra</author>
  <license>BSD</license>
  <url type="repository">https://github.com/niko1499/Lidar_Utility</url>
  <url type="bugtracker">https://github.com/niko1499/Lidar_Utility/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
 
  <build_depend>angles</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <!--exec_depend>libpcl-all</exec_depend-->
  <run_depend>nodelet</run_depend>
  <export>
    <nodelet plugin="${prefix}/nodelets.xml"/>
  </export>
</package>
